--- a/src/job.yml
+++ b/src/job.yml
@@ -1,15 +1,12 @@
 $schema: https://azuremlschemas.azureedge.net/latest/commandJob.schema.json
 code: model
-command: >-
-  python 
-  --
-  --
+command: python train.py
 inputs:
   training_data: 
     type: uri_folder 
-    path: 
+    path: azureml:diabetes-folder:1
   reg_rate: 0.01
 environment: azureml:AzureML-sklearn-0.24-ubuntu18.04-py37-cpu@latest
-compute: 
-experiment_name: 
-description: 
+compute: local
+experiment_name: run_python_test
+description: To run python in AML environment to train and test a model based on dibetes data
