--- a/.github/workflows/05-train-python-diabetes.yml
+++ b/.github/workflows/05-train-python-diabetes.yml
@@ -1,6 +1,7 @@
 $schema: https://azuremlschemas.azureedge.net/latest/commandJob.schema.json
 code: model
-command: python train.py
+command: >-
+   python train.py
 inputs:
   training_data: 
     type: uri_folder 
@@ -8,5 +9,5 @@ inputs:
   reg_rate: 0.01
 environment: azureml:AzureML-sklearn-0.24-ubuntu18.04-py37-cpu@latest
 compute: azureml:jrcomp1
-experiment_name: run_python_test
+experiment_name: run-python-test-diabetes
 description: To run python in AML environment to train and test a model based on dibetes data
