--- a/.github/workflows/01_create_pipeline.yml
+++ b/.github/workflows/01_create_pipeline.yml
@@ -29,5 +29,6 @@ jobs:
         az configure --defaults group="${{ github.event.inputs.resource_group }}"
         az configure --defaults workspace="${{ github.event.inputs.aml_workspace }}"
     - name: Create pipeline in Azure ML workspace
-      run: |
-        az ml job create --file src/job.yml --resource-group "${{github.event.inputs.resource_group}}" --workspace-name "${{github.event.inputs.aml_workspace}}"
+      run: |  
+        cd src
+        az ml job create -f job.yml -g "${{github.event.inputs.resource_group}}" -w "${{github.event.inputs.aml_workspace}}"
