--- a/src/job.yml
+++ b/src/job.yml
@@ -10,6 +10,6 @@ inputs:
     path: azureml:diabetes-folder:1
   reg_rate: 0.01
 environment: azureml:AzureML-sklearn-0.24-ubuntu18.04-py37-cpu@latest
-compute: azureml:jrcomp1
+compute: azureml:jrcc
 experiment_name: run-python-test-diabetes
 description: To run python in AML environment to train and test a model based on diabetes data
